...
        globalStyles.logouttry,
        globalStyles.padding,
        { backgroundColor: colors["background"] },
      ]}
    >
      <Text style={[globalStyles.textHuge, globalStyles.padding, { color: colors["priT"] }]}>
        Come Back Soon, There's More to Come
      </Text>
      {errMsg && (
        <Text style={[globalStyles.errorText, { color: colors["secC"], marginBottom: 16 }]}>
          {errMsg}
        </Text>
      )}
      {loading ? (
        <ActivityIndicator size={"small"} style={{ margin: 28 }} />
      ) : (
        <Pressable
          style={[globalStyles.button, { backgroundColor: colors["priC"] }]}
          onPress={handleLogOut}
          testID="logout-confirm-button"
        >
          <Text style={[globalStyles.buttonText, { color: colors["secT"] }]}>Log Out</Text>
        </Pressable>
      )}
    </View>
  );
...
