...
              onImageSelected={handleImageSelected}
              size={120}
              editable={true}
              isUploading={isUploading}
            />
            <Text style={[globalStyles.textTitle, { color: colors.text, marginTop: 16 }]}>
              Basic Information
            </Text>
            <Text style={[globalStyles.labelText, { color: colors.text }]}>
              Edit your Profile information
            </Text>
            {/* {id ? (
              <Text style={{ color: colors.quaC }}>ID is Good</Text>
...
